# stashflow

./: .gitignore  DESIGN.md  LICENSE  PRODUCT.md  README.md  go.mod
.github/workflows/: release.yml
cloudflare/stashflow-edge/: Cargo.toml  README.md  wrangler.toml
cloudflare/stashflow-edge/src/: lib.rs
cmd/stashflow/: main.go
cmd/stashflow-clean/: main.go
internal/stashflow/: core.go  core_test.go  templates.go
